@startuml classes
set namespaceSeparator none
class "Database" as database.db.Database #aliceblue {
  connection
  cursor
  database_path : str
  get_all_item_ids()
  get_all_user_information()
  get_cost_by_sale_id(sale_id: int)
  get_email_by_username(username: str)
  get_first_name_by_username(username: str)
  get_full_inventory()
  get_full_sale_by_id(sale_id: int)
  get_full_sales_information()
  get_item_category_by_id(item_id: int)
  get_item_id_by_sale_id(sale_id: int)
  get_item_image_url_by_id(item_id: int)
  get_item_info_by_id(item_id: int)
  get_item_name_by_id(item_id: int)
  get_item_price_by_id(item_id: int)
  get_item_stock_by_id(item_id: int)
  get_last_name_by_username(username: str)
  get_password_hash_by_username(username: str)
  get_quantity_by_sale_id(sale_id: int)
  get_sale_date_by_sale_id(sale_id: int)
  get_sales_by_cost_range(start_cost: float, end_cost: float)
  get_sales_by_date_range(start_date: dt.date, end_date: dt.date)
  get_sales_by_item_id(item_id: int)
  get_sales_by_quantity_range(start_quantity: int, end_quantity: int)
  get_sales_by_transaction_id(transaction_id: int)
  get_sales_by_username(username: str)
  get_transaction_id_by_sale_id(sale_id: int)
  get_username_by_sale_id(sale_id: int)
  insert_new_item(item_name: str, price: int, info: str) -> None
  insert_new_sale(transaction_id: int, username: str, item_id: int, quantity: int, sale_date: dt.date, cost: float)
  insert_user(username: str, password_hash: str, email: str, first_name: str, last_name: str) -> None
  set_email(username: str, new_email: str)
  set_first_name(username: str, new_first_name: str)
  set_item_category(item_id: int, new_category: str)
  set_item_image_url(item_id: int, new_image_url: str)
  set_item_info(item_id: int, new_info: str)
  set_item_name(item_id: int, new_name: str)
  set_item_price(item_id: int, new_price: float)
  set_item_stock(item_id: int, new_stock: int)
  set_last_name(username: str, new_last_name: str)
  set_password_hash(username: str, new_password_hash: str)
  set_sale_cost(sale_id: int, discount: float, tax: float)
  set_sale_date(sale_id: int, new_sale_date: dt.date)
  set_sale_item_id(sale_id: int, new_item_id: int)
  set_sale_quantity(sale_id: int, new_quantity: int)
  set_sale_transaction_id(sale_id: int, new_transaction_id: int)
  set_sale_username(sale_id: int, new_username: str)
}

class "User" as User #lightyellow {
  username: str
  password_hash: str
  email: str
  first_name: str
  last_name: str
  get_email()
  get_first_name()
  get_last_name()
  set_email(new_email: str)
  set_first_name(new_first_name: str)
  set_last_name(new_last_name: str)
  get_full_name()
  get_username()
  set_password_hash(new_password_hash: str)
}

class "Item" as Item #lightyellow {
  item_id: int
  name: str
  price: int
  stock: int
  category: str
  info: str
  get_item_id() : int
  get_name() : str
  get_price() : int
  get_stock() : int
  get_category() : str
  get_info() : str
  set_name(new_name: str) : void
  set_price(new_price: int) : void
  set_stock(new_stock: int) : void
  set_category(new_category: str) : void
  set_info(new_info: str) : void
}

class "ShoppingCart" as ShoppingCart #lightyellow {
  cart_id: int
  user_id: int
  items: List[Item]
  add_item(item: Item, quantity: int) : void
  remove_item(item: Item) : void
  update_item_quantity(item: Item, new_quantity: int) : void
  get_total_cost() : float
  clear_cart() : void
  checkout() : Sale
}

class "Payment" as Payment #lightyellow {
  payment_id: int
  sale_id: int
  payment_status: str
  amount: float
  payment_date: dt.date
  get_payment_id() : int
  get_sale_id() : int
  get_payment_status() : str
  get_amount() : float
  get_payment_date() : dt.date
  process_payment() : bool
  set_sale_id(new_sale_id: int) : void
  set_payment_status(new_payment_status: str) : void
  set_amount(new_amount: float) : void
  set_payment_date(new_payment_date: dt.date) : void
}

class "SearchEngine" as SearchEngine #lightyellow {
  search_item_by_name(name: str) : List[Item]
  search_item_by_category(category: str) : List[Item]
  search_item_by_price_range(min_price: float, max_price: float) : List[Item]
  search_item_by_stock_availability(min_stock: int) : List[Item]
}

User "1" --> "N" ShoppingCart
User "1" --> "N" Sale
Item "1" --> "N" Sale
ShoppingCart "1" --> "N" Item
Sale "1" --> "1" Payment
SearchEngine "1" --> "N" Item

@enduml
